# mcp-agent-mail-rs

./: .clippy.toml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS-compressed.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  SUMMARY.md  WALKTHROUGH.md  bun.lockb  cliff.toml  compiler_output.txt  cov_output.txt  cov_summary.txt  deny.toml  docker-compose.yml  init-new.md  init-tools.md  justfile  llms.txt  mutants.toml  pmat_final.txt  pmat_report.json  release-please-config.json
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
benches/: concurrent_agents.rs
crates/libs/lib-common/: Cargo.toml
crates/libs/lib-common/src/: config.rs  lib.rs  robot.rs  tracing.rs
crates/libs/lib-common/tests/: robot_tests.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: error.rs  lib.rs  types.rs  utils.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/model/: activity.rs  agent.rs  agent_capabilities.rs  agent_link.rs  archive_browser.rs  attachment.rs  build_slot.rs  export.rs  file_reservation.rs  identity.rs  macro_def.rs  message.rs  message_recipient.rs  mod.rs  orchestration.rs  overseer_message.rs  precommit_guard.rs  product.rs  project.rs  project_sibling_suggestion.rs  time_travel.rs  tool_metric.rs
crates/libs/lib-core/src/store/: archive_lock.rs  file_safety.rs  git_store.rs  mod.rs  repo_cache.rs
crates/libs/lib-core/src/utils/: image_processing.rs  mistake_detection.rs  pathspec.rs  project_identity.rs  validation.rs
crates/libs/lib-core/tests/: activity_tests.rs  agent_link_tests.rs  agent_tests.rs  archive_lock_tests.rs  attachment_tests.rs  build_slot_tests.rs  capability_tests.rs  cc_bcc_tests.rs  concurrent_tests.rs  escalation_tests.rs  export_scrub_tests.rs  export_tests.rs  file_reservation_tests.rs  fts_tests.rs  image_edge_tests.rs  integration.rs  macro_tests.rs  message_tests.rs  orchestration_tests.rs  overseer_message_tests.rs  performance_benchmarks.rs  precommit_guard_tests.rs  product_tests.rs  project_sibling_suggestion_tests.rs  project_tests.rs  query_locality_tests.rs  quota_tests.rs  resource_cleanup_tests.rs  tool_metric_tests.rs  unified_inbox_tests.rs
crates/libs/lib-core/tests/common/: mod.rs
crates/libs/lib-mcp/: Cargo.toml
crates/libs/lib-mcp/src/: docs.rs  lib.rs  tools.rs
crates/libs/lib-mcp/tests/: agent_tests.rs  archive_tests.rs  attachments_tests.rs  docs_tests.rs  error_code_tests.rs  files_tests.rs  input_validation_tests.rs  macro_convenience_tests.rs  mcp_resource_api_tests.rs  ntm_compatibility_tests.rs  observability_tests.rs  product_tools_tests.rs  resource_tests.rs  schema_generation_tests.rs  test_convenience_tools.rs  test_domain_modules.rs  test_export_reviews.rs  test_macro_impl.rs  test_macro_tools.rs  test_precommit_files.rs  test_summarize_thread.rs  tool_dispatch_tests.rs
crates/libs/lib-server/: Cargo.toml
crates/libs/lib-server/src/: api.rs  auth.rs  embedded.rs  error.rs  lib.rs  mcp.rs  openapi.rs  ratelimit.rs  static_files.rs  tools.rs
crates/libs/lib-server/src/api/: attachments.rs  export.rs  unified_inbox.rs
crates/libs/lib-server/tests/: http_transport_tests.rs  mcp_integration.rs  tools_tests.rs
crates/libs/mouchak-mail-mcp/tests/: test_domain_modules.rs
crates/libs/mouchak-mail-server/src/: mcp.rs
crates/services/mcp-agent-mail/: Cargo.toml
crates/services/mcp-agent-mail/src/: main.rs  panic_hook.rs  robot_help.rs
crates/services/mcp-agent-mail/tests/: cli_guard.rs  cli_products.rs  cli_service.rs
crates/services/mcp-cli/: Cargo.toml
crates/services/mcp-cli/src/: main.rs
crates/services/mcp-server/: Cargo.toml
crates/services/mcp-server/src/: api.rs  auth.rs  error.rs  main.rs  tools.rs
crates/services/mcp-stdio/: Cargo.toml
crates/services/mcp-stdio/src/: main.rs  tools.rs
crates/services/mcp-stdio/tests/: activity_tests.rs  integration.rs
crates/services/mouchak-mail/: Cargo.toml
crates/services/mouchak-mail/src/: main.rs  robot_help.rs
crates/services/mouchak-mail/tests/: cli_guard.rs  cli_products.rs  cli_service.rs
crates/services/web-ui/: bun.lockb  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts
crates/services/web-ui-leptos/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
crates/services/web-ui-leptos/scripts/: accessibility-audit.ts
crates/services/web-ui-leptos/src/: app.rs  lib.rs  main.rs
crates/services/web-ui-leptos/style/: tailwind.css
crates/services/web-ui/src/: app.css  app.html
crates/services/web-ui/tests/: bulk-actions.spec.ts  dashboard.spec.ts  empty-states.spec.ts  list-search.spec.ts  list-sorting.spec.ts  mail.spec.ts  messaging.spec.ts  projects.spec.ts  pwa-modal.spec.ts  uuid-hiding.spec.ts
crates/tests/e2e/: Cargo.toml
crates/tests/e2e/src/: fixtures.rs  lib.rs
crates/tests/e2e/tests/: api.rs  archive_workflow.rs  auth_rate_limit.rs  cli_tests.rs  console_check.rs  contact_policy.rs  guard_integration.rs  (+7 more)
deploy/: install_service.sh
deploy/systemd/: mcp-agent-mail.service
docs/: ARCHITECTURE.md  BEADS_ENV.md  Completed_task.md  MCP_OPERATIONS_COMPARISON.md  PLAN_CRITICISM_577.1.md  PROJECT_PLAN.md  UNIFIED_BENCHMARKING_PLAN.md  WALKTHROUGH_100SEC.srt  api-quality-audit-report.md  github-pages-deployment.md
migrations/: 001_initial_schema.sql  002_agent_capabilities.sql  003_tool_metrics.sql  004_add_recipient_type.sql  004_attachments.sql  005_attachments_agent.sql  006_query_indexes.sql
mouchak-brand-assets/: README.md
scripts/: benchmark_agent_workflows.sh  benchmark_concurrent_agents.sh  dev.sh  install.sh  install_service.sh  integrate_all.sh
scripts/hooks/: check_inbox.sh  codex_notify.sh  pre-commit
scripts/integrations/: QUICK_START.md  README.md  aider.sh  antigravity.sh  claude-code.sh  cline.sh  codex.sh  continue.sh  copilot.sh  cursor.sh  gemini.sh  generic-mcp.sh  opencode.sh  windsurf.sh
(+124 files in other folders)
