[workspace]
resolver = "2"
members = [
    "crates/libs/lib-core",
    "crates/services/mcp-server",
    "crates/services/mcp-cli",
]

[workspace.dependencies]
# Web Framework
axum = "0.6"
tokio = { version = "1", features = ["full"] }

# Database
libsql = { version = "0.9.29", features = [] }
chrono = { version = "0.4", features = ["serde"] }

# Git
git2 = "0.18"

# Templating / Markdown
minijinja = "1.0"
pulldown-cmark = "0.10"

# MCP Protocol SDK
mcp-protocol-sdk = "0.5.1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }