[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
chrono.workspace = true
libsql.workspace = true
serde.workspace = true
serde_json.workspace = true
csv = "1.3"
utoipa = { version = "5", features = ["uuid", "chrono"] }
thiserror.workspace = true
uuid.workspace = true
git2.workspace = true
tracing.workspace = true
slug = "0.1.6"

# Crate-specific dependencies
strum_macros = "0.27.2" # For AsRefStr derive
tokio = { version = "1.48.0", features = ["macros"] }
sha1 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tempfile = "3.23.0"
