[package]
name = "lib-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
lib-core = { path = "../lib-core" }
lib-common = { path = "../lib-common" }

# Http
axum.workspace = true
tower-http.workspace = true
tower = { version = "0.5", features = ["util"] }

# Async
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true # TODO: remove once fully refactored
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
chrono.workspace = true
base64.workspace = true
uuid.workspace = true

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum-extra = { version = "0.9", features = ["typed-header"] }
once_cell = "1.19"
