[package]
name = "mcp-agent-mail"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
lib-core = { path = "../../libs/lib-core" }
lib-common = { path = "../../libs/lib-common" }
lib-server = { path = "../../libs/lib-server" }
lib-mcp = { path = "../../libs/lib-mcp" }

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP Client
reqwest.workspace = true

# Utils
anyhow.workspace = true
serde_json.workspace = true
