[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
mcp-protocol-sdk.workspace = true # MCP SDK

# Internal workspace dependency
lib-core = { path = "../../libs/lib-core" }
