[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true # Added direct chrono dependency
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
mcp-protocol-sdk.workspace = true # MCP SDK
thiserror = "1.0" # Added thiserror
hyper = "0.14" # Added hyper

# Internal workspace dependency
lib-core = { path = "../../libs/lib-core" }
