[package]
name = "mcp-stdio"
version = "0.1.0"
edition = "2021"
description = "MCP stdio server for Agent Mail - Claude Desktop and Antigravity integration"

[[bin]]
name = "mcp-stdio-server"
path = "src/main.rs"

[dependencies]
# Internal
lib-mcp = { path = "../../libs/lib-mcp" }
lib-common = { path = "../../libs/lib-common" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.20"
libsql = "0.9"
